--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
      <link rel="icon" type="image/png" href="../../logo_praiseApp.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindplus/elements@1" type="module"></script> 
     <title>frontend</title>
   </head>
   <body>
