--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="PraiseApp est une application moderne de gestion et de partage de chants. Elle permet aux utilisateurs d’ajouter, consulter et gérer facilement des chants en ligne grâce à une interface fluide et intuitive." />
      <link rel="icon" type="image/png" href="../../logo_praiseApp.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
